Killed baseOld
renamed number methods (my torture never ends)